# evermem-ai

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
bench/: README.md  analyze_errors.py  compare_same100.py  diag_embed.py  latency.py  llm_backends.py  run_longmemeval.py  test_deepseek.py
docker/: Dockerfile  docker-compose.yml
evermem/: __init__.py  cli.py  corrections.py  counters.py  embed_backends.py  embeddings.py  events.py  export.py  extractor.py  ingest.py  llm.py  mcp_server.py  memory.py  plasticity.py  query_intent.py  store.py  summarize.py  types.py
evermem/integrations/: __init__.py  langchain.py  llamaindex.py
evermem/server/: __init__.py  app.py  config.py  service.py
evermem/server/static/: index.html
evermem/server/static/assets/: index-CWUGXQJ_.js  index-CkFDtoi5.css  index-D2J2vOok.css  index-DKfkaufs.js
examples/: chat_ollama.py  chat_openai.py
server/: README.md
tests/: test_bench_fixes.py  test_cli.py  test_corrections.py  test_extractor.py  test_ingest.py  test_lifecycle.py  test_llm_backends.py  test_mcp_server.py  test_memory.py  test_plasticity.py  test_server.py  test_sprint2.py  test_sprint4.py  test_store.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: ChatInput.tsx  ChatMessage.tsx  MemoryPanel.tsx  Sidebar.tsx  SourcesBlock.tsx  Switch.tsx  ThemeToggle.tsx
web/src/hooks/: useTheme.ts  useThreads.ts
