[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evermem-ai"
version = "0.4.0"
description = "Local-first eternal memory engine for any LLM: conflict-aware claims, temporal validity, trust scoring, retrieval plasticity. Zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "alisa999000", email = "grin.vadim2016@gmail.com" }]
keywords = ["llm", "memory", "agents", "mcp", "local-first", "ollama", "rag", "pdf", "offline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/alisa999000/evermem"
Issues = "https://github.com/alisa999000/evermem/issues"

[project.scripts]
evermem = "evermem.cli:main"
evermem-mcp = "evermem.mcp_server:main"
evermem-server = "evermem.server:main"

[project.optional-dependencies]
pdf = ["pypdf>=4"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.9"]
langchain = ["langchain-core>=0.3"]
llamaindex = ["llama-index-core>=0.11"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["evermem*"]

[tool.setuptools.package-data]
"evermem.server" = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
